--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material-nextjs": "^7.2.0",
     "next": "15.4.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.61.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
